--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Metocart AI - Merchant System</title>
+<title>Metocart AI - Smart Merchant System</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -9,104 +9,129 @@
 body{
   margin:0;
   font-family:'Inter',sans-serif;
-  background:#000;
-  color:#fff;
+  background:#f4f6f9;
+  color:#111;
 }
 
-.dashboard{display:none;min-height:100vh;}
-
-.sidebar{
-  width:230px;
+/* LOGIN */
+.login-screen{
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
   background:#111;
-  padding:20px;
-  position:fixed;
-  height:100%;
-  border-right:1px solid #222;
 }
-
-.sidebar h2{margin-bottom:20px;}
-
-.sidebar button{
+.login-card{
+  background:#fff;
+  padding:40px;
+  border-radius:12px;
+  width:320px;
+}
+.login-card input{
   width:100%;
   padding:10px;
   margin:8px 0;
-  background:#000;
-  border:1px solid #333;
+}
+.login-card button{
+  width:100%;
+  padding:10px;
+  background:#111;
   color:#fff;
-  border-radius:6px;
+  border:none;
+}
+
+/* DASHBOARD */
+.dashboard{display:none;}
+
+.sidebar{
+  width:220px;
+  background:#111;
+  color:#fff;
+  position:fixed;
+  height:100%;
+  padding:20px;
+}
+.sidebar h2{color:#00c6ff;}
+.sidebar button{
+  width:100%;
+  margin:8px 0;
+  padding:10px;
+  background:#222;
+  color:#fff;
+  border:none;
   cursor:pointer;
 }
+.sidebar button:hover{background:#00c6ff;color:#000;}
 
-.sidebar button:hover{
-  background:#fff;
-  color:#000;
+.main{
+  margin-left:240px;
+  padding:30px;
 }
-
-.main{margin-left:250px;padding:30px;}
-
-.section{display:none;}
-.active{display:block;}
 
 .card{
   background:#fff;
-  color:#000;
   padding:20px;
   border-radius:10px;
   margin-bottom:20px;
+}
+
+.kpi-container{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:15px;
+  margin-bottom:20px;
+}
+.kpi{
+  background:#111;
+  color:#fff;
+  padding:15px;
+  border-radius:8px;
+  text-align:center;
 }
 
 input{
   width:100%;
   padding:8px;
   margin:6px 0;
-  border-radius:6px;
-  border:1px solid #ccc;
 }
 
 button.primary{
-  background:#000;
+  background:#111;
   color:#fff;
   padding:8px 14px;
   border:none;
-  border-radius:6px;
   cursor:pointer;
-}
-
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-  gap:15px;
-  margin-bottom:20px;
-}
-
-.kpi{
-  background:#fff;
-  color:#000;
-  padding:15px;
-  border-radius:8px;
-  text-align:center;
 }
 
 table{
   width:100%;
   border-collapse:collapse;
 }
-
 th,td{
   padding:8px;
   border-bottom:1px solid #ddd;
+}
+
+.section{display:none;}
+.active{display:block;}
+
+.invoice-box{
+  background:#fff;
+  padding:15px;
+  border:1px solid #ccc;
+  margin-top:15px;
 }
 </style>
 </head>
 <body>
 
 <!-- LOGIN -->
-<div id="loginScreen" style="display:flex;height:100vh;align-items:center;justify-content:center;">
-  <div style="background:#111;padding:40px;border-radius:10px;">
-    <h2>Metocart AI</h2>
-    <input type="email" placeholder="Email">
-    <input type="password" placeholder="Password">
-    <button onclick="login()" style="width:100%;padding:10px;margin-top:10px;">Login</button>
+<div class="login-screen" id="loginScreen">
+  <div class="login-card">
+    <h2>Metocart AI Login</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
   </div>
 </div>
 
@@ -117,6 +142,7 @@ th,td{
   <h2>Metocart</h2>
   <button onclick="showSection('home')">Dashboard</button>
   <button onclick="showSection('inventory')">Inventory</button>
+  <button onclick="showSection('billing')">Billing</button>
   <button onclick="showSection('ai')">AI Tools</button>
   <button onclick="logout()">Logout</button>
 </div>
@@ -127,36 +153,44 @@ th,td{
 <div id="home" class="section active">
   <h2>Business Overview</h2>
 
-  <div class="kpis">
+  <div class="kpi-container">
     <div class="kpi"><h3 id="totalRevenue">₹0</h3><p>Total Revenue</p></div>
     <div class="kpi"><h3 id="totalCost">₹0</h3><p>Total Cost</p></div>
     <div class="kpi"><h3 id="totalProfit">₹0</h3><p>Total Profit</p></div>
+    <div class="kpi"><h3 id="totalGST">₹0</h3><p>Total GST</p></div>
   </div>
-
-  <div id="invoiceBox"></div>
 </div>
 
 <!-- INVENTORY -->
 <div id="inventory" class="section">
   <div class="card">
     <h2>Inventory Manager</h2>
-
     <input type="text" id="pname" placeholder="Product Name">
     <input type="number" id="pcost" placeholder="Cost Price">
     <input type="number" id="psell" placeholder="Selling Price">
     <input type="number" id="pqty" placeholder="Quantity">
     <button class="primary" onclick="addProduct()">Add Product</button>
-
     <div id="productTable"></div>
+  </div>
+</div>
+
+<!-- BILLING -->
+<div id="billing" class="section">
+  <div class="card">
+    <h2>Billing & Invoice</h2>
+    <input type="text" id="customerName" placeholder="Customer Name">
+    <input type="number" id="gstPercent" placeholder="GST %" value="18">
+    <button class="primary" onclick="createInvoice()">Generate Invoice</button>
+    <div id="invoice"></div>
   </div>
 </div>
 
 <!-- AI -->
 <div id="ai" class="section">
   <div class="card">
-    <h2>AI Business Plan Generator</h2>
-    <input type="text" id="idea" placeholder="Business Idea">
-    <button class="primary" onclick="generatePlan()">Generate Plan</button>
+    <h2>AI Business Advisor</h2>
+    <input type="text" id="idea" placeholder="Ask business advice...">
+    <button class="primary" onclick="generateAI()">Ask AI</button>
     <div id="aiOutput"></div>
   </div>
 </div>
@@ -171,15 +205,19 @@ const API_KEY="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";
 let products=[];
 let totalRevenue=0;
 let totalCost=0;
+let totalGST=0;
 
 function login(){
-  document.getElementById("loginScreen").style.display="none";
-  document.getElementById("dashboard").style.display="block";
+  if(document.getElementById("username").value==="admin" &&
+     document.getElementById("password").value==="1234"){
+    document.getElementById("loginScreen").style.display="none";
+    document.getElementById("dashboard").style.display="block";
+  }else{
+    alert("Invalid login");
+  }
 }
 
-function logout(){
-  location.reload();
-}
+function logout(){location.reload();}
 
 function showSection(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
@@ -187,66 +225,75 @@ function showSection(id){
 }
 
 function addProduct(){
-  const name=document.getElementById("pname").value;
-  const cost=parseFloat(document.getElementById("pcost").value);
-  const sell=parseFloat(document.getElementById("psell").value);
-  const qty=parseInt(document.getElementById("pqty").value);
-
+  const name=pname.value;
+  const cost=parseFloat(pcost.value);
+  const sell=parseFloat(psell.value);
+  const qty=parseInt(pqty.value);
   products.push({name,cost,sell,qty});
   renderProducts();
 }
 
 function renderProducts(){
-  let html="<table><tr><th>Name</th><th>Cost</th><th>Sell</th><th>Qty</th><th>Sell</th></tr>";
-
-  products.forEach((p,index)=>{
-    html+=`<tr>
-      <td>${p.name}</td>
-      <td>₹${p.cost}</td>
-      <td>₹${p.sell}</td>
-      <td>${p.qty}</td>
-      <td><button onclick="sellProduct(${index})">Sell</button></td>
-    </tr>`;
+  let html="<table><tr><th>Name</th><th>Stock</th><th>Sell Price</th></tr>";
+  products.forEach(p=>{
+    html+=`<tr><td>${p.name}</td><td>${p.qty}</td><td>₹${p.sell}</td></tr>`;
   });
-
   html+="</table>";
-  document.getElementById("productTable").innerHTML=html;
+  productTable.innerHTML=html;
 }
 
-function sellProduct(index){
-  let p=products[index];
-  if(p.qty<=0){alert("Out of stock");return;}
+function createInvoice(){
+  const customer=customerName.value;
+  const gst=parseFloat(gstPercent.value);
 
-  p.qty--;
+  let subtotal=0;
+  let costTotal=0;
 
-  totalRevenue+=p.sell;
-  totalCost+=p.cost;
+  products.forEach(p=>{
+    if(p.qty>0){
+      p.qty--;
+      subtotal+=p.sell;
+      costTotal+=p.cost;
+    }
+  });
+
+  const gstAmount=subtotal*(gst/100);
+  const total=subtotal+gstAmount;
+
+  totalRevenue+=total;
+  totalCost+=costTotal;
+  totalGST+=gstAmount;
 
   updateKPIs();
+  renderProducts();
 
-  document.getElementById("invoiceBox").innerHTML=
-  `<div class="card">
+  invoice.innerHTML=`
+  <div class="invoice-box">
     <h3>Invoice Slip</h3>
-    Product: ${p.name}<br>
-    Selling Price: ₹${p.sell}<br>
-    Profit: ₹${p.sell - p.cost}<br>
+    Customer: ${customer}<br>
+    Subtotal: ₹${subtotal}<br>
+    GST (${gst}%): ₹${gstAmount.toFixed(2)}<br>
+    Total: ₹${total.toFixed(2)}<br>
     Date: ${new Date().toLocaleString()}
   </div>`;
-
-  renderProducts();
 }
 
 function updateKPIs(){
-  document.getElementById("totalRevenue").innerText="₹"+totalRevenue;
-  document.getElementById("totalCost").innerText="₹"+totalCost;
-  document.getElementById("totalProfit").innerText="₹"+(totalRevenue-totalCost);
+  totalRevenueEl.innerText="₹"+totalRevenue.toFixed(2);
+  totalCostEl.innerText="₹"+totalCost.toFixed(2);
+  totalProfit.innerText="₹"+(totalRevenue-totalCost).toFixed(2);
+  totalGSTEl.innerText="₹"+totalGST.toFixed(2);
 }
 
-async function generatePlan(){
-  const idea=document.getElementById("idea").value;
-  document.getElementById("aiOutput").innerHTML="Generating...";
+const totalRevenueEl=document.getElementById("totalRevenue");
+const totalCostEl=document.getElementById("totalCost");
+const totalGSTEl=document.getElementById("totalGST");
 
-  const response=await fetch("https://api.groq.com/openai/v1/chat/completions",{
+async function generateAI(){
+  const q=idea.value;
+  aiOutput.innerHTML="Thinking...";
+
+  const res=await fetch("https://api.groq.com/openai/v1/chat/completions",{
     method:"POST",
     headers:{
       "Authorization":"Bearer "+API_KEY,
@@ -255,15 +302,14 @@ async function generatePlan(){
     body:JSON.stringify({
       model:"llama-3.1-8b-instant",
       messages:[
-        {role:"system",content:"You are an expert startup advisor."},
-        {role:"user",content:`Create structured professional business plan for ${idea}`}
+        {role:"system",content:"You are a professional business consultant."},
+        {role:"user",content:q}
       ]
     })
   });
 
-  const data=await response.json();
-  document.getElementById("aiOutput").innerHTML=
-    data.choices[0].message.content.replace(/\n/g,"<br>");
+  const data=await res.json();
+  aiOutput.innerHTML=data.choices[0].message.content.replace(/\n/g,"<br>");
 }
 
 </script>
