--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Metocart AI - Smart Merchant System</title>
+<title>Metocart AI - Smart Merchant Platform</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -9,8 +9,8 @@
 body{
   margin:0;
   font-family:'Inter',sans-serif;
-  background:#f4f6f9;
-  color:#111;
+  background:#f5f7fa;
+  color:#1a1a1a;
 }
 
 /* LOGIN */
@@ -19,107 +19,134 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  background:#111;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 }
 .login-card{
   background:#fff;
   padding:40px;
-  border-radius:12px;
-  width:320px;
+  border-radius:16px;
+  width:350px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.2);
+}
+.login-card h2{
+  text-align:center;
+  margin-bottom:20px;
 }
 .login-card input{
   width:100%;
-  padding:10px;
-  margin:8px 0;
+  padding:12px;
+  margin:10px 0;
+  border-radius:8px;
+  border:1px solid #ccc;
 }
 .login-card button{
   width:100%;
-  padding:10px;
-  background:#111;
+  padding:12px;
+  background:#0066ff;
   color:#fff;
   border:none;
+  border-radius:8px;
+  font-weight:600;
+  cursor:pointer;
 }
 
 /* DASHBOARD */
 .dashboard{display:none;}
 
 .sidebar{
-  width:220px;
-  background:#111;
-  color:#fff;
+  width:240px;
+  background:#ffffff;
   position:fixed;
   height:100%;
-  padding:20px;
+  padding:25px;
+  box-shadow:2px 0 15px rgba(0,0,0,0.05);
 }
-.sidebar h2{color:#00c6ff;}
+.sidebar h2{
+  color:#0066ff;
+}
 .sidebar button{
   width:100%;
-  margin:8px 0;
-  padding:10px;
-  background:#222;
-  color:#fff;
+  margin:10px 0;
+  padding:12px;
+  background:#f1f3f6;
   border:none;
+  border-radius:8px;
   cursor:pointer;
 }
-.sidebar button:hover{background:#00c6ff;color:#000;}
+.sidebar button:hover{
+  background:#0066ff;
+  color:#fff;
+}
 
 .main{
-  margin-left:240px;
-  padding:30px;
+  margin-left:270px;
+  padding:40px;
 }
 
 .card{
   background:#fff;
-  padding:20px;
-  border-radius:10px;
-  margin-bottom:20px;
+  padding:25px;
+  border-radius:16px;
+  margin-bottom:25px;
+  box-shadow:0 5px 20px rgba(0,0,0,0.05);
 }
 
 .kpi-container{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-  gap:15px;
-  margin-bottom:20px;
+  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+  gap:20px;
+  margin-bottom:30px;
 }
+
 .kpi{
-  background:#111;
+  background:#0066ff;
   color:#fff;
-  padding:15px;
-  border-radius:8px;
+  padding:20px;
+  border-radius:12px;
   text-align:center;
 }
 
 input{
   width:100%;
-  padding:8px;
-  margin:6px 0;
+  padding:12px;
+  margin:8px 0;
+  border-radius:8px;
+  border:1px solid #ccc;
 }
 
 button.primary{
-  background:#111;
+  background:#0066ff;
   color:#fff;
-  padding:8px 14px;
+  padding:10px 18px;
   border:none;
+  border-radius:8px;
   cursor:pointer;
+  font-weight:600;
 }
 
 table{
   width:100%;
   border-collapse:collapse;
+  margin-top:15px;
 }
 th,td{
-  padding:8px;
-  border-bottom:1px solid #ddd;
+  padding:12px;
+  border-bottom:1px solid #eee;
+}
+
+.low-stock{
+  color:red;
+  font-weight:bold;
 }
 
 .section{display:none;}
 .active{display:block;}
 
 .invoice-box{
-  background:#fff;
-  padding:15px;
-  border:1px solid #ccc;
-  margin-top:15px;
+  background:#f9fbff;
+  padding:20px;
+  border-radius:12px;
+  border:1px solid #dfe7ff;
 }
 </style>
 </head>
@@ -128,7 +155,7 @@ th,td{
 <!-- LOGIN -->
 <div class="login-screen" id="loginScreen">
   <div class="login-card">
-    <h2>Metocart AI Login</h2>
+    <h2>Metocart AI</h2>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
@@ -143,7 +170,7 @@ th,td{
   <button onclick="showSection('home')">Dashboard</button>
   <button onclick="showSection('inventory')">Inventory</button>
   <button onclick="showSection('billing')">Billing</button>
-  <button onclick="showSection('ai')">AI Tools</button>
+  <button onclick="showSection('ai')">AI Advisor</button>
   <button onclick="logout()">Logout</button>
 </div>
 
@@ -154,10 +181,10 @@ th,td{
   <h2>Business Overview</h2>
 
   <div class="kpi-container">
-    <div class="kpi"><h3 id="totalRevenue">₹0</h3><p>Total Revenue</p></div>
-    <div class="kpi"><h3 id="totalCost">₹0</h3><p>Total Cost</p></div>
-    <div class="kpi"><h3 id="totalProfit">₹0</h3><p>Total Profit</p></div>
-    <div class="kpi"><h3 id="totalGST">₹0</h3><p>Total GST</p></div>
+    <div class="kpi"><h3 id="totalRevenue">₹0</h3><p>Revenue</p></div>
+    <div class="kpi"><h3 id="totalProfit">₹0</h3><p>Profit</p></div>
+    <div class="kpi"><h3 id="inventoryValue">₹0</h3><p>Inventory Value</p></div>
+    <div class="kpi"><h3 id="lowStockCount">0</h3><p>Low Stock Items</p></div>
   </div>
 </div>
 
@@ -177,9 +204,9 @@ th,td{
 <!-- BILLING -->
 <div id="billing" class="section">
   <div class="card">
-    <h2>Billing & Invoice</h2>
+    <h2>Invoice Generator</h2>
     <input type="text" id="customerName" placeholder="Customer Name">
-    <input type="number" id="gstPercent" placeholder="GST %" value="18">
+    <input type="number" id="gstPercent" value="18">
     <button class="primary" onclick="createInvoice()">Generate Invoice</button>
     <div id="invoice"></div>
   </div>
@@ -189,7 +216,7 @@ th,td{
 <div id="ai" class="section">
   <div class="card">
     <h2>AI Business Advisor</h2>
-    <input type="text" id="idea" placeholder="Ask business advice...">
+    <input type="text" id="idea" placeholder="Ask about profit, pricing, stock strategy...">
     <button class="primary" onclick="generateAI()">Ask AI</button>
     <div id="aiOutput"></div>
   </div>
@@ -204,93 +231,90 @@ const API_KEY="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";
 
 let products=[];
 let totalRevenue=0;
-let totalCost=0;
-let totalGST=0;
+let totalProfit=0;
 
 function login(){
-  if(document.getElementById("username").value==="admin" &&
-     document.getElementById("password").value==="1234"){
-    document.getElementById("loginScreen").style.display="none";
-    document.getElementById("dashboard").style.display="block";
-  }else{
-    alert("Invalid login");
-  }
+  if(username.value==="admin" && password.value==="1234"){
+    loginScreen.style.display="none";
+    dashboard.style.display="block";
+  }else alert("Invalid login");
 }
 
 function logout(){location.reload();}
-
 function showSection(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 
 function addProduct(){
-  const name=pname.value;
-  const cost=parseFloat(pcost.value);
-  const sell=parseFloat(psell.value);
-  const qty=parseInt(pqty.value);
-  products.push({name,cost,sell,qty});
+  products.push({
+    name:pname.value,
+    cost:parseFloat(pcost.value),
+    sell:parseFloat(psell.value),
+    qty:parseInt(pqty.value)
+  });
   renderProducts();
+  updateDashboard();
 }
 
 function renderProducts(){
-  let html="<table><tr><th>Name</th><th>Stock</th><th>Sell Price</th></tr>";
+  let html="<table><tr><th>Name</th><th>Stock</th><th>Sell</th></tr>";
   products.forEach(p=>{
-    html+=`<tr><td>${p.name}</td><td>${p.qty}</td><td>₹${p.sell}</td></tr>`;
+    html+=`<tr>
+      <td>${p.name}</td>
+      <td class="${p.qty<5?'low-stock':''}">${p.qty}</td>
+      <td>₹${p.sell}</td>
+    </tr>`;
   });
   html+="</table>";
   productTable.innerHTML=html;
 }
 
 function createInvoice(){
-  const customer=customerName.value;
   const gst=parseFloat(gstPercent.value);
-
   let subtotal=0;
-  let costTotal=0;
+  let profit=0;
 
   products.forEach(p=>{
     if(p.qty>0){
       p.qty--;
       subtotal+=p.sell;
-      costTotal+=p.cost;
+      profit+=(p.sell-p.cost);
     }
   });
 
   const gstAmount=subtotal*(gst/100);
-  const total=subtotal+gstAmount;
+  totalRevenue+=subtotal+gstAmount;
+  totalProfit+=profit;
 
-  totalRevenue+=total;
-  totalCost+=costTotal;
-  totalGST+=gstAmount;
-
-  updateKPIs();
+  updateDashboard();
   renderProducts();
 
   invoice.innerHTML=`
   <div class="invoice-box">
-    <h3>Invoice Slip</h3>
-    Customer: ${customer}<br>
+    <h3>Invoice #${Math.floor(Math.random()*10000)}</h3>
+    Customer: ${customerName.value}<br>
     Subtotal: ₹${subtotal}<br>
-    GST (${gst}%): ₹${gstAmount.toFixed(2)}<br>
-    Total: ₹${total.toFixed(2)}<br>
-    Date: ${new Date().toLocaleString()}
+    GST: ₹${gstAmount.toFixed(2)}<br>
+    Total: ₹${(subtotal+gstAmount).toFixed(2)}<br>
   </div>`;
 }
 
-function updateKPIs(){
+function updateDashboard(){
   totalRevenueEl.innerText="₹"+totalRevenue.toFixed(2);
-  totalCostEl.innerText="₹"+totalCost.toFixed(2);
-  totalProfit.innerText="₹"+(totalRevenue-totalCost).toFixed(2);
-  totalGSTEl.innerText="₹"+totalGST.toFixed(2);
+  totalProfitEl.innerText="₹"+totalProfit.toFixed(2);
+
+  let invValue=products.reduce((sum,p)=>sum+(p.cost*p.qty),0);
+  inventoryValue.innerText="₹"+invValue;
+
+  let low=products.filter(p=>p.qty<5).length;
+  lowStockCount.innerText=low;
 }
 
 const totalRevenueEl=document.getElementById("totalRevenue");
-const totalCostEl=document.getElementById("totalCost");
-const totalGSTEl=document.getElementById("totalGST");
+const totalProfitEl=document.getElementById("totalProfit");
 
 async function generateAI(){
-  const q=idea.value;
   aiOutput.innerHTML="Thinking...";
 
   const res=await fetch("https://api.groq.com/openai/v1/chat/completions",{
@@ -302,8 +326,8 @@ async function generateAI(){
     body:JSON.stringify({
       model:"llama-3.1-8b-instant",
       messages:[
-        {role:"system",content:"You are a professional business consultant."},
-        {role:"user",content:q}
+        {role:"system",content:"You are a smart retail AI advisor. You can analyze inventory and suggest growth strategies."},
+        {role:"user",content:`Inventory: ${JSON.stringify(products)}. Question: ${idea.value}`}
       ]
     })
   });
