--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@ body{
   background:#fff;
   padding:40px;
   border-radius:16px;
-  width:350px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.2);
+  width:320px;
 }
 .login-card input{
   width:100%;
   padding:12px;
   margin:10px 0;
-  border-radius:8px;
-  border:1px solid #ccc;
 }
 .login-card button{
   width:100%;
@@ -41,27 +38,26 @@ body{
   background:#0066ff;
   color:#fff;
   border:none;
-  border-radius:8px;
-  font-weight:600;
-  cursor:pointer;
 }
 
 /* DASHBOARD */
 .dashboard{display:none;}
 
 .sidebar{
-  width:240px;
-  background:#ffffff;
+  width:230px;
+  background:#fff;
   position:fixed;
   height:100%;
-  padding:25px;
-  box-shadow:2px 0 15px rgba(0,0,0,0.05);
+  padding:20px;
+  box-shadow:2px 0 10px rgba(0,0,0,0.05);
+  transition:0.3s;
 }
 .sidebar h2{color:#0066ff;}
+
 .sidebar button{
   width:100%;
-  margin:10px 0;
-  padding:12px;
+  padding:10px;
+  margin:8px 0;
   background:#f1f3f6;
   border:none;
   border-radius:8px;
@@ -73,75 +69,73 @@ body{
 }
 
 .main{
-  margin-left:270px;
-  padding:40px;
-}
-
-.card{
-  background:#fff;
-  padding:25px;
-  border-radius:16px;
-  margin-bottom:25px;
-  box-shadow:0 5px 20px rgba(0,0,0,0.05);
+  margin-left:250px;
+  padding:30px;
 }
 
 .kpi-container{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
-  gap:20px;
-  margin-bottom:30px;
+  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+  gap:15px;
 }
 
 .kpi{
   background:#0066ff;
   color:#fff;
-  padding:20px;
-  border-radius:12px;
+  padding:15px;
+  border-radius:10px;
   text-align:center;
 }
 
-input{
+.card{
+  background:#fff;
+  padding:20px;
+  border-radius:12px;
+  margin-top:20px;
+}
+
+input, select{
   width:100%;
-  padding:12px;
-  margin:8px 0;
-  border-radius:8px;
-  border:1px solid #ccc;
+  padding:10px;
+  margin:6px 0;
 }
 
 button.primary{
   background:#0066ff;
   color:#fff;
-  padding:10px 18px;
+  padding:8px 14px;
   border:none;
-  border-radius:8px;
+  border-radius:6px;
   cursor:pointer;
-  font-weight:600;
-}
-
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:15px;
-}
-th,td{
-  padding:12px;
-  border-bottom:1px solid #eee;
-}
-
-.low-stock{
-  color:red;
-  font-weight:bold;
 }
 
 .section{display:none;}
 .active{display:block;}
 
-.invoice-box{
-  background:#f9fbff;
-  padding:20px;
-  border-radius:12px;
-  border:1px solid #dfe7ff;
+.low-stock{color:red;font-weight:bold;}
+
+/* MOBILE */
+@media(max-width:768px){
+  .sidebar{
+    position:absolute;
+    left:-240px;
+  }
+  .sidebar.active{
+    left:0;
+  }
+  .main{
+    margin-left:0;
+  }
+  .menu-btn{
+    display:block;
+    background:#0066ff;
+    color:#fff;
+    padding:8px;
+    text-align:center;
+    cursor:pointer;
+  }
 }
+.menu-btn{display:none;}
 </style>
 </head>
 
@@ -157,15 +151,15 @@ th,td{
   </div>
 </div>
 
-<!-- DASHBOARD -->
 <div class="dashboard" id="dashboard">
 
-<div class="sidebar">
+<div class="menu-btn" onclick="toggleMenu()">☰ Menu</div>
+
+<div class="sidebar" id="sidebar">
   <h2>Metocart</h2>
   <button onclick="showSection('home')">Dashboard</button>
   <button onclick="showSection('inventory')">Inventory</button>
   <button onclick="showSection('billing')">Billing</button>
-  <button onclick="showSection('calculator')">Calculations</button>
   <button onclick="showSection('ai')">AI Advisor</button>
   <button onclick="logout()">Logout</button>
 </div>
@@ -175,25 +169,24 @@ th,td{
 <!-- DASHBOARD -->
 <div id="home" class="section active">
   <h2>Business Overview</h2>
-
   <div class="kpi-container">
-    <div class="kpi"><h3 id="totalRevenue">₹0</h3><p>Revenue</p></div>
-    <div class="kpi"><h3 id="totalProfit">₹0</h3><p>Profit</p></div>
+    <div class="kpi"><h3 id="rev">₹0</h3><p>Revenue</p></div>
+    <div class="kpi"><h3 id="profit">₹0</h3><p>Profit</p></div>
+    <div class="kpi"><h3 id="gstTotal">₹0</h3><p>GST Collected</p></div>
     <div class="kpi"><h3 id="inventoryValue">₹0</h3><p>Inventory Value</p></div>
-    <div class="kpi"><h3 id="lowStockCount">0</h3><p>Low Stock Items</p></div>
   </div>
 </div>
 
 <!-- INVENTORY -->
 <div id="inventory" class="section">
   <div class="card">
-    <h2>Inventory Manager</h2>
-    <input type="text" id="pname" placeholder="Product Name">
-    <input type="text" id="pcategory" placeholder="Category (Pipes, Faucets...)">
-    <input type="number" id="pcost" placeholder="Cost Price">
-    <input type="number" id="psell" placeholder="Selling Price">
-    <input type="number" id="pqty" placeholder="Quantity">
-    <button class="primary" onclick="addProduct()">Add Product</button>
+    <h2>Inventory</h2>
+    <input id="pname" placeholder="Product Name">
+    <input id="pcategory" placeholder="Category">
+    <input type="number" id="pcost" placeholder="Cost">
+    <input type="number" id="psell" placeholder="Sell Price">
+    <input type="number" id="pqty" placeholder="Stock">
+    <button class="primary" onclick="addProduct()">Add</button>
     <div id="productTable"></div>
   </div>
 </div>
@@ -201,42 +194,14 @@ th,td{
 <!-- BILLING -->
 <div id="billing" class="section">
   <div class="card">
-    <h2>Invoice Generator</h2>
-    <input type="text" id="customerName" placeholder="Customer Name">
+    <h2>Billing</h2>
+
+    <select id="billProduct"></select>
+    <input type="number" id="billQty" placeholder="Quantity">
     <input type="number" id="gstPercent" value="18">
-    <button class="primary" onclick="createInvoice()">Generate Invoice</button>
+    <button class="primary" onclick="createInvoice()">Generate Bill</button>
+
     <div id="invoice"></div>
-  </div>
-</div>
-
-<!-- CALCULATOR HUB -->
-<div id="calculator" class="section">
-  <div class="card">
-    <h2>Business Calculation Hub</h2>
-
-    <h3>Monthly Expense Calculator</h3>
-    <input type="number" id="rent" placeholder="Rent">
-    <input type="number" id="electricity" placeholder="Electricity">
-    <input type="number" id="salary" placeholder="Salary">
-    <input type="number" id="transport" placeholder="Transport">
-    <button class="primary" onclick="calculateExpenses()">Calculate</button>
-    <p id="expenseResult"></p>
-
-    <hr>
-
-    <h3>Margin Calculator</h3>
-    <input type="number" id="buyPrice" placeholder="Buying Price">
-    <input type="number" id="sellPriceMargin" placeholder="Selling Price">
-    <button class="primary" onclick="calculateMargin()">Calculate</button>
-    <p id="marginResult"></p>
-
-    <hr>
-
-    <h3>Discount Calculator</h3>
-    <input type="number" id="bulkPrice" placeholder="Total Price">
-    <input type="number" id="discountPercent" placeholder="Discount %">
-    <button class="primary" onclick="calculateDiscount()">Calculate</button>
-    <p id="discountResult"></p>
   </div>
 </div>
 
@@ -244,7 +209,7 @@ th,td{
 <div id="ai" class="section">
   <div class="card">
     <h2>AI Business Advisor</h2>
-    <input type="text" id="idea" placeholder="Ask about stock strategy, pricing...">
+    <input id="aiQuestion" placeholder="Ask about growth, pricing, GST strategy...">
     <button class="primary" onclick="generateAI()">Ask AI</button>
     <div id="aiOutput"></div>
   </div>
@@ -254,21 +219,26 @@ th,td{
 </div>
 
 <script>
-
-const API_KEY="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";
+const API_KEY="gsk_your_key_here";
 
 let products=[];
 let totalRevenue=0;
 let totalProfit=0;
+let totalGST=0;
 
 function login(){
   if(username.value==="admin" && password.value==="1234"){
     loginScreen.style.display="none";
     dashboard.style.display="block";
-  }else alert("Invalid login");
+  } else alert("Invalid login");
 }
 
 function logout(){location.reload();}
+
+function toggleMenu(){
+  sidebar.classList.toggle("active");
+}
+
 function showSection(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
@@ -276,102 +246,77 @@ function showSection(id){
 
 function addProduct(){
   products.push({
-    id:products.length+1,
     name:pname.value,
     category:pcategory.value,
-    cost:parseFloat(pcost.value),
-    sell:parseFloat(psell.value),
-    qty:parseInt(pqty.value)
+    cost:+pcost.value,
+    sell:+psell.value,
+    qty:+pqty.value
   });
+  updateProductList();
   renderProducts();
   updateDashboard();
 }
 
+function updateProductList(){
+  billProduct.innerHTML="";
+  products.forEach((p,i)=>{
+    billProduct.innerHTML+=`<option value="${i}">${p.name} (${p.qty})</option>`;
+  });
+}
+
 function renderProducts(){
-  let totalUnits=0;
-  let html="<table><tr><th>ID</th><th>Name</th><th>Category</th><th>Stock</th><th>Sell</th></tr>";
+  let html="<table><tr><th>Name</th><th>Category</th><th>Stock</th></tr>";
   products.forEach(p=>{
-    totalUnits+=p.qty;
     html+=`<tr>
-      <td>${p.id}</td>
-      <td>${p.name}</td>
-      <td>${p.category}</td>
-      <td class="${p.qty<5?'low-stock':''}">${p.qty}</td>
-      <td>₹${p.sell}</td>
+    <td>${p.name}</td>
+    <td>${p.category}</td>
+    <td class="${p.qty<5?'low-stock':''}">${p.qty}</td>
     </tr>`;
   });
   html+="</table>";
-  html+=`<p><strong>Total Units: ${totalUnits}</strong></p>`;
   productTable.innerHTML=html;
 }
 
 function createInvoice(){
-  const gst=parseFloat(gstPercent.value);
-  let subtotal=0;
-  let profit=0;
+  let index=billProduct.value;
+  let qty=+billQty.value;
+  let gst=+gstPercent.value;
 
-  products.forEach(p=>{
-    if(p.qty>0){
-      p.qty--;
-      subtotal+=p.sell;
-      profit+=(p.sell-p.cost);
-    }
-  });
+  let p=products[index];
+  if(qty>p.qty){ alert("Not enough stock"); return;}
 
-  const gstAmount=subtotal*(gst/100);
+  let subtotal=p.sell*qty;
+  let gstAmount=subtotal*(gst/100);
+  let profit=(p.sell-p.cost)*qty;
+
+  p.qty-=qty;
+
   totalRevenue+=subtotal+gstAmount;
   totalProfit+=profit;
+  totalGST+=gstAmount;
 
-  updateDashboard();
+  updateProductList();
   renderProducts();
+  updateDashboard();
 
   invoice.innerHTML=`
-  <div class="invoice-box">
-    <h3>Invoice #${Math.floor(Math.random()*10000)}</h3>
-    Customer: ${customerName.value}<br>
+  <div class="card">
+    <h3>Invoice</h3>
+    Product: ${p.name}<br>
+    Qty: ${qty}<br>
     Subtotal: ₹${subtotal}<br>
     GST: ₹${gstAmount.toFixed(2)}<br>
-    Total: ₹${(subtotal+gstAmount).toFixed(2)}<br>
+    Total: ₹${(subtotal+gstAmount).toFixed(2)}
   </div>`;
 }
 
 function updateDashboard(){
-  totalRevenueEl.innerText="₹"+totalRevenue.toFixed(2);
-  totalProfitEl.innerText="₹"+totalProfit.toFixed(2);
-
+  rev.innerText="₹"+totalRevenue.toFixed(2);
+  profit.innerText="₹"+totalProfit.toFixed(2);
+  gstTotal.innerText="₹"+totalGST.toFixed(2);
   let invValue=products.reduce((sum,p)=>sum+(p.cost*p.qty),0);
-  inventoryValue.innerText="₹"+invValue;
-
-  let low=products.filter(p=>p.qty<5).length;
-  lowStockCount.innerText=low;
+  inventoryValue.innerText="₹"+invValue.toFixed(2);
 }
-
-function calculateExpenses(){
-  let total =
-    parseFloat(rent.value||0)+
-    parseFloat(electricity.value||0)+
-    parseFloat(salary.value||0)+
-    parseFloat(transport.value||0);
-
-  expenseResult.innerHTML="Total Monthly Expenses: ₹"+total.toFixed(2);
-}
-
-function calculateMargin(){
-  let buy=parseFloat(buyPrice.value||0);
-  let sell=parseFloat(sellPriceMargin.value||0);
-  let margin=((sell-buy)/buy)*100;
-  marginResult.innerHTML="Profit: ₹"+(sell-buy).toFixed(2)+" | Margin: "+margin.toFixed(2)+"%";
-}
-
-function calculateDiscount(){
-  let price=parseFloat(bulkPrice.value||0);
-  let discount=parseFloat(discountPercent.value||0);
-  let final=price-(price*discount/100);
-  discountResult.innerHTML="Final Price: ₹"+final.toFixed(2);
-}
-
-const totalRevenueEl=document.getElementById("totalRevenue");
-const totalProfitEl=document.getElementById("totalProfit");
 
 async function generateAI(){
   aiOutput.innerHTML="Thinking...";
@@ -384,15 +329,14 @@ async function generateAI(){
     body:JSON.stringify({
       model:"llama-3.1-8b-instant",
       messages:[
-        {role:"system",content:"You are a smart retail AI advisor."},
-        {role:"user",content:`Inventory: ${JSON.stringify(products)}. Question: ${idea.value}`}
+        {role:"system",content:"You are a professional retail business AI advisor."},
+        {role:"user",content:`Revenue:${totalRevenue}, Profit:${totalProfit}, GST:${totalGST}, Inventory:${JSON.stringify(products)}. Question:${aiQuestion.value}`}
       ]
     })
   });
   const data=await res.json();
   aiOutput.innerHTML=data.choices[0].message.content.replace(/\n/g,"<br>");
 }
-
 </script>
 
 </body>
