--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@ body{
 }
 .login-card{
   background:#fff;
-  padding:40px;
+  padding:35px;
   border-radius:16px;
-  width:320px;
+  width:90%;
+  max-width:350px;
 }
 .login-card input{
   width:100%;
@@ -44,23 +45,25 @@ body{
 .dashboard{display:none;}
 
 .sidebar{
-  width:230px;
+  width:240px;
   background:#fff;
   position:fixed;
   height:100%;
   padding:20px;
-  box-shadow:2px 0 10px rgba(0,0,0,0.05);
+  box-shadow:2px 0 15px rgba(0,0,0,0.08);
   transition:0.3s;
+  z-index:1000;
 }
-.sidebar h2{color:#0066ff;}
-
+.sidebar h2{
+  color:#0066ff;
+}
 .sidebar button{
   width:100%;
-  padding:10px;
+  padding:12px;
   margin:8px 0;
   background:#f1f3f6;
   border:none;
-  border-radius:8px;
+  border-radius:10px;
   cursor:pointer;
 }
 .sidebar button:hover{
@@ -69,73 +72,89 @@ body{
 }
 
 .main{
-  margin-left:250px;
+  margin-left:260px;
   padding:30px;
 }
 
 .kpi-container{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
   gap:15px;
 }
 
 .kpi{
   background:#0066ff;
   color:#fff;
-  padding:15px;
-  border-radius:10px;
+  padding:18px;
+  border-radius:14px;
   text-align:center;
+  box-shadow:0 5px 15px rgba(0,0,0,0.08);
 }
 
 .card{
   background:#fff;
   padding:20px;
-  border-radius:12px;
+  border-radius:14px;
   margin-top:20px;
+  box-shadow:0 5px 15px rgba(0,0,0,0.05);
 }
 
 input, select{
   width:100%;
-  padding:10px;
-  margin:6px 0;
+  padding:12px;
+  margin:8px 0;
+  border-radius:8px;
+  border:1px solid #ddd;
 }
 
 button.primary{
   background:#0066ff;
   color:#fff;
-  padding:8px 14px;
+  padding:10px 16px;
   border:none;
-  border-radius:6px;
+  border-radius:8px;
   cursor:pointer;
 }
 
 .section{display:none;}
 .active{display:block;}
 
-.low-stock{color:red;font-weight:bold;}
+.low-stock{
+  color:red;
+  font-weight:bold;
+}
 
-/* MOBILE */
+.menu-btn{
+  display:none;
+}
+
 @media(max-width:768px){
-  .sidebar{
-    position:absolute;
-    left:-240px;
-  }
-  .sidebar.active{
-    left:0;
-  }
-  .main{
-    margin-left:0;
-  }
   .menu-btn{
     display:block;
     background:#0066ff;
     color:#fff;
-    padding:8px;
+    padding:12px;
     text-align:center;
     cursor:pointer;
   }
+
+  .sidebar{
+    left:-260px;
+  }
+
+  .sidebar.active{
+    left:0;
+  }
+
+  .main{
+    margin-left:0;
+    padding:20px;
+  }
+
+  .kpi-container{
+    grid-template-columns:1fr 1fr;
+  }
 }
-.menu-btn{display:none;}
 </style>
 </head>
 
@@ -183,10 +202,10 @@ button.primary{
     <h2>Inventory</h2>
     <input id="pname" placeholder="Product Name">
     <input id="pcategory" placeholder="Category">
-    <input type="number" id="pcost" placeholder="Cost">
+    <input type="number" id="pcost" placeholder="Cost Price">
     <input type="number" id="psell" placeholder="Sell Price">
     <input type="number" id="pqty" placeholder="Stock">
-    <button class="primary" onclick="addProduct()">Add</button>
+    <button class="primary" onclick="addProduct()">Add Product</button>
     <div id="productTable"></div>
   </div>
 </div>
@@ -195,12 +214,10 @@ button.primary{
 <div id="billing" class="section">
   <div class="card">
     <h2>Billing</h2>
-
     <select id="billProduct"></select>
     <input type="number" id="billQty" placeholder="Quantity">
     <input type="number" id="gstPercent" value="18">
     <button class="primary" onclick="createInvoice()">Generate Bill</button>
-
     <div id="invoice"></div>
   </div>
 </div>
@@ -219,7 +236,7 @@ button.primary{
 </div>
 
 <script>
-const API_KEY="gsk_your_key_here";
+const API_KEY="gsk_your_api_key_here";
 
 let products=[];
 let totalRevenue=0;
@@ -236,7 +253,7 @@ function login(){
 function logout(){location.reload();}
 
 function toggleMenu(){
-  sidebar.classList.toggle("active");
+  document.getElementById("sidebar").classList.toggle("active");
 }
 
 function showSection(id){
@@ -283,16 +300,16 @@ function createInvoice(){
   let gst=+gstPercent.value;
 
   let p=products[index];
-  if(qty>p.qty){ alert("Not enough stock"); return;}
+  if(!p || qty>p.qty){ alert("Invalid quantity"); return;}
 
   let subtotal=p.sell*qty;
   let gstAmount=subtotal*(gst/100);
-  let profit=(p.sell-p.cost)*qty;
+  let profitValue=(p.sell-p.cost)*qty;
 
   p.qty-=qty;
 
   totalRevenue+=subtotal+gstAmount;
-  totalProfit+=profit;
+  totalProfit+=profitValue;
   totalGST+=gstAmount;
 
   updateProductList();
@@ -329,7 +346,7 @@ async function generateAI(){
     body:JSON.stringify({
       model:"llama-3.1-8b-instant",
       messages:[
-        {role:"system",content:"You are a professional retail business AI advisor."},
+        {role:"system",content:"You are a professional retail AI advisor."},
         {role:"user",content:`Revenue:${totalRevenue}, Profit:${totalProfit}, GST:${totalGST}, Inventory:${JSON.stringify(products)}. Question:${aiQuestion.value}`}
       ]
     })
